valobj/tests/ui/tuple/tuple_several_fields_test.rs
#[valobj::value_object]
pub struct UserId(u64, i32);

fn main() {}
